[gd_scene load_steps=3 format=3 uid="uid://doic5y55axw2e"]

[ext_resource type="Script" path="res://scenes/popups/grid_settings/grid_settings_cancel_button.gd" id="1_84pru"]
[ext_resource type="Script" path="res://scenes/popups/grid_settings/grid_settings_confirm_button.gd" id="1_sst6x"]

[node name="Grid_Settings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 384.0
offset_top = 128.0
offset_right = -384.0
offset_bottom = -144.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Grid_Settings_Margin" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Grid_Settings_VBox" type="VBoxContainer" parent="Grid_Settings_Margin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Grid_Settings_Header_Label" type="Label" parent="Grid_Settings_Margin/Grid_Settings_VBox"]
layout_mode = 2
text = "Grid Settings"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Grid_Settings_Gird_Margin" type="MarginContainer" parent="Grid_Settings_Margin/Grid_Settings_VBox"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 16
theme_override_constants/margin_right = 16

[node name="Grid_Settings_Grid" type="GridContainer" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="Cell_Width_Label" type="Label" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin/Grid_Settings_Grid"]
layout_mode = 2
text = "Cell Width:"
horizontal_alignment = 2

[node name="Cell_Width_SpinBox" type="SpinBox" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin/Grid_Settings_Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1024.0
value = 1.0
rounded = true

[node name="Cell_Height_Label" type="Label" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin/Grid_Settings_Grid"]
layout_mode = 2
text = "Cell Height:"
horizontal_alignment = 2

[node name="Cell_Height_SpinBox" type="SpinBox" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin/Grid_Settings_Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
min_value = 1.0
max_value = 1024.0
value = 1.0
rounded = true

[node name="Grid_Color_Label" type="Label" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin/Grid_Settings_Grid"]
layout_mode = 2
text = "Grid Color:"
horizontal_alignment = 2

[node name="Grid_Color_ColorPicker" type="ColorPickerButton" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Settings_Gird_Margin/Grid_Settings_Grid"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0

[node name="Grid_Setttings_Choice_HBox" type="HBoxContainer" parent="Grid_Settings_Margin/Grid_Settings_VBox"]
layout_mode = 2
alignment = 2

[node name="Grid_Settings_Confirm_Button" type="Button" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Setttings_Choice_HBox"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "Confirm"
script = ExtResource("1_sst6x")

[node name="Grid_Settings_Cancel_Button" type="Button" parent="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Setttings_Choice_HBox"]
custom_minimum_size = Vector2(96, 64)
layout_mode = 2
text = "Cancel"
script = ExtResource("1_84pru")

[connection signal="pressed" from="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Setttings_Choice_HBox/Grid_Settings_Confirm_Button" to="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Setttings_Choice_HBox/Grid_Settings_Confirm_Button" method="_on_pressed"]
[connection signal="pressed" from="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Setttings_Choice_HBox/Grid_Settings_Cancel_Button" to="Grid_Settings_Margin/Grid_Settings_VBox/Grid_Setttings_Choice_HBox/Grid_Settings_Cancel_Button" method="_on_pressed"]
